# icra_2025_09_two_finger_version

./: CMakeLists.txt  README.md  package.xml
examples/: force_test_node.py  haptic_test_node.py
hri_falcon_robot_bridge/: ball_tracker_node.py  continuous_force_test_node.py  data_logger_hdf5_node.py  data_logger_node.py  deformity_tracker_node.py  dynamixel_control.py  emg_node.py  force_sensor_node.py  hand_tracker_node.py  hand_tracker_node_two.py  haptic_robot_controller.py  mms101_controller.py  robot_controller_node.py
hri_falcon_robot_bridge/evaluation/: dclaw_sim.py
launch/: ball_tracker.launch.py  bridge.launch.py  haptic_system.launch.py  robot_controller.launch.py
log/: latest_list
outputs/2025-08-29/15-46-01/.hydra/: config.yaml  hydra.yaml
readme_files/: learning_pipeline.mmd  system_architecture.mmd
resource/robot_parameter/: config.yaml
resource/sensor_parameter/: config.yaml
scripts/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_STIFFNESS.md  calculate_stiffness.py  csv_to_robomimic_hdf5.py  diffusion_policy_full.py  energy_based.py  example_stiffness_usage.py  falcon_position_reader.py  generate_sample_data.py  generate_stiffness_profiles.py  generate_stiffness_profiles_test.py  generative_model_suite.py  process_demonstrations.py  run_robot_controller.sh
scripts/3_model_learning/: evaluate_stiffness_policy.py  run_stiffness_policy_benchmarks.py
scripts/configs/: dexmimicgen_local_example.yaml
scripts/configs/stiffness_policy/: README.md  behavior_cloning.yaml  diffusion_conditional.yaml  diffusion_temporal.yaml  gmm.yaml  ibc.yaml  lstm_gmm.yaml  training_defaults.yaml
scripts/dexmimicgen/: dclaw_impedance_control.py  prepare_dexmimicgen_dataset.py  process_demonstrations.py  run_dexmimicgen_augmentation.py
src/: falcon_node.cpp
