<?xml version="1.0"?>
<package format="3">
  <name>hri_falcon_robot_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble: Force sensor → Falcon force input, Falcon encoders/position → Dynamixel controller mapping.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <depend>mujoco</depend>
  <depend>mujoco_py</depend>
  <depend>matplotlib</depend>
  <exec_depend>dclaw_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
